Fixed cta position on mobile.

--- a/assets/scss/sticky-menu-minimal.scss
+++ b/assets/scss/sticky-menu-minimal.scss
@@ -31,7 +31,9 @@
 	}
 
 	&__navigation {
-		align-self: flex-end;
+		@media (min-width: 992px) {
+			align-self: flex-end;
+		}
 
 		.main-navigation {
 			display: none;
